Добавлено... много всего. Заглавная страница для каждой главы. Запоминание истории, переходы с заглавной на остальные страницы. Остались только кнопки перехода и выбор рецепта